--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "backend",
+  "name": "nodecontactform",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "Sample app using nodemailer",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "description": ""
+  "author": "Brad Traversy",
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.4",
+    "express-handlebars": "^3.0.0",
+    "nodemailer": "^4.1.0"
+  }
 }
